2011-02-22 Harri Pitkänen <hatapitk@iki.fi>
	* Add option --disable-extdicts that disables loading all external dictionaries.
	* Increase version number to 3.1.1.

2011-02-15 Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>
	* Fix build with GCC 4.6

2011-01-23 Harri Pitkänen <hatapitk@iki.fi>
	* Fix internal error due to missing break in switch.

2010-12-08 Harri Pitkänen <hatapitk@iki.fi>
	* Add configure option --disable-testtools

2010-12-04 Harri Pitkänen <hatapitk@iki.fi>
	* Consistently return SPELL_FAILED instead of INTERNAL_ERROR
	  when too long word is spell checked.
	* Mark fixed limits deprecated. In the future different backends
	  may have different limits and users of the library should not care.

2010-11-14 Harri Pitkänen <hatapitk@iki.fi>
	* Clear Malaga heap at the end of analyse_item. This reduces
	  the need for garbage collecting and makes bugs in Malaga VM
	  easier to reproduce.

2010-11-10 Harri Pitkänen <hatapitk@iki.fi>
	* Fix strict aliasing bug (Trac #20) and a some const correctness
	  issues that were uncovered by the fix.

2010-11-08 Harri Pitkänen <hatapitk@iki.fi>
	* Update MSVC build files.

2010-10-27 Harri Pitkänen <hatapitk@iki.fi>
	* GC: Allow AutoCorrect rules with more than two match words.
	* Support capitalized first character of sentence when interpreting
	  AutoCorrect rules.

2010-10-26 Harri Pitkänen <hatapitk@iki.fi>
	* Increase maximum spelling suggestion search cost by 28 % to match
	  recent optimizations and CPU speed improvements.

2010-10-25 Harri Pitkänen <hatapitk@iki.fi>
	* Capitalized initials may appear within sentences.

2010-10-24 Harri Pitkänen <hatapitk@iki.fi>
	* Add check for incorrect infinitive form in compound verbs.

2010-10-21 Harri Pitkänen <hatapitk@iki.fi>
	* Add A-infinitive and E-infinitive to MalagaAnalyzer.

2010-10-21 Harri Pitkänen <hatapitk@iki.fi>
	* Add MA-infinitive to MalagaAnalyzer.

2010-10-10 Harri Pitkänen <hatapitk@iki.fi>